--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="cn">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css" media="none" onload="this.media='all';">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css" media="none" onload="this.media='all';">
     <link rel="stylesheet" type="text/css" href="css/jquery.countdown.css">
     <title>傻子好!</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
